window.v


fn C.window_add_alert_banner_control(&WindowInfo, &u8, &u8, &u8, &u8) voidptr

fn C.window_set_alert_banner_value(&WindowInfo, &u8, &u8, &u8, &u8)

fn C.window_add_step_tracker_control(&WindowInfo, &u8, &&u8, int, int) voidptr

fn C.window_set_step_tracker_step(&WindowInfo, &u8, int)

fn C.window_get_step_tracker_step(&WindowInfo, &u8) int

fn C.window_add_filter_chips_control(&WindowInfo, &u8, &&u8, int, &&u8, int, bool) voidptr

fn C.window_set_filter_chips_selected(&WindowInfo, &u8, &&u8, int)

fn C.window_get_filter_chips_selected(&WindowInfo, &u8) &u8

fn C.window_add_file_picker_field_control(&WindowInfo, &u8, &u8, &u8, bool) voidptr

fn C.window_set_file_picker_path(&WindowInfo, &u8, &u8)

fn C.window_get_file_picker_path(&WindowInfo, &u8) &u8

fn C.window_add_radial_gauge_control(&WindowInfo, &u8, &u8, f64, f64, f64, &u8) voidptr

fn C.window_set_radial_gauge_value(&WindowInfo, &u8, f64)

fn C.window_get_radial_gauge_value(&WindowInfo, &u8) f64

fn C.window_add_key_value_card_control(&WindowInfo, &u8, &u8, &&u8, &&u8, int) voidptr

fn C.window_set_key_value_card_data(&WindowInfo, &u8, &&u8, &&u8, int)

fn C.window_add_diff_view_control(&WindowInfo, &u8, &u8, &u8, int) voidptr

fn C.window_set_diff_view_text(&WindowInfo, &u8, &u8, &u8)

fn C.window_add_json_tree_control(&WindowInfo, &u8, &u8, int) voidptr

fn C.window_set_json_tree_data(&WindowInfo, &u8, &u8)

fn C.window_add_http_request_card_control(&WindowInfo, &u8, &u8, &u8, int, int) voidptr

fn C.window_set_http_request_card_data(&WindowInfo, &u8, &u8, &u8, int, int)

fn C.window_add_terminal_view_control(&WindowInfo, &u8, &u8, int) voidptr

fn C.window_append_terminal_line(&WindowInfo, &u8, &u8, int)

fn C.window_clear_terminal(&WindowInfo, &u8)

fn C.window_add_resource_monitor_control(&WindowInfo, &u8, int, int, int, int) voidptr

fn C.window_set_resource_monitor_metrics(&WindowInfo, &u8, int, int, int, int)

fn C.window_add_env_vars_control(&WindowInfo, &u8, &u8, &&u8, &&u8, int) voidptr

fn C.window_set_env_vars_data(&WindowInfo, &u8, &&u8, &&u8, int)

fn C.window_add_badge_button_control(&WindowInfo, &u8, &u8, int, &u8) voidptr

fn C.window_set_badge_button_count(&WindowInfo, &u8, int)

fn C.window_add_command_palette_control(&WindowInfo, &u8, &u8, &u8) voidptr

fn C.window_set_command_palette_text(&WindowInfo, &u8, &u8)

fn C.window_add_status_banner_control(&WindowInfo, &u8, &u8, &u8, &u8) voidptr

fn C.window_set_status_banner_text(&WindowInfo, &u8, &u8, &u8, &u8)

fn C.window_add_pill_toggle_control(&WindowInfo, &u8, &&u8, int, int) voidptr

fn C.window_set_pill_toggle_selected(&WindowInfo, &u8, int)

fn C.window_add_color_swatch_panel_control(&WindowInfo, &u8, &&u8, int, &u8) voidptr

fn C.window_set_color_swatch_selected(&WindowInfo, &u8, &u8)

fn C.window_add_hotkey_badge_control(&WindowInfo, &u8, &u8, &u8) voidptr

fn C.window_set_hotkey_badge_shortcut(&WindowInfo, &u8, &u8, &u8)

// 6 New UI Controls C declarations
fn C.window_add_quick_action_bar_control(&WindowInfo, &u8, &&u8, &&u8, int) voidptr

fn C.window_set_quick_action_enabled(&WindowInfo, &u8, int, int)

fn C.window_add_accordion_group_control(&WindowInfo, &u8, &&u8, int, int) voidptr

fn C.window_set_accordion_expanded(&WindowInfo, &u8, int, int)

fn C.window_add_segment_distribution_bar_control(&WindowInfo, &u8, &&u8, &f64, &&u8, int, int) voidptr

fn C.window_set_segment_distribution_values(&WindowInfo, &u8, &f64, int)

fn C.window_add_tag_input_field_control(&WindowInfo, &u8, &&u8, int) voidptr

fn C.window_set_tag_input_tags(&WindowInfo, &u8, &&u8, int)

fn C.window_get_tag_input_tags(&WindowInfo, &u8) &u8

fn C.window_add_status_dock_control(&WindowInfo, &u8, &u8, &u8, &u8) voidptr

fn C.window_set_status_dock_info(&WindowInfo, &u8, &u8, &u8, &u8)

fn C.window_add_info_callout_control(&WindowInfo, &u8, &u8, &u8, &u8, &u8) voidptr

fn C.window_set_info_callout_text(&WindowInfo, &u8, &u8, &u8)

fn C.window_set_alpha(&WindowInfo, f64)

fn C.window_get_alpha(&WindowInfo) f64

fn C.window_get_min_size(&WindowInfo, &int, &int)

fn C.window_get_max_size(&WindowInfo, &int, &int)

fn C.window_set_collection_behavior(&WindowInfo, &u8)

fn C.window_set_close_button_enabled(&WindowInfo, int)

fn C.window_set_minimize_button_enabled(&WindowInfo, int)

fn C.window_set_zoom_button_enabled(&WindowInfo, int)

fn C.window_set_content_insets(&WindowInfo, int, int, int, int)

fn C.window_set_tabbing_mode(&WindowInfo, &u8)

fn C.window_get_tabbing_mode(&WindowInfo) &char

fn C.window_set_tabbing_identifier(&WindowInfo, &u8)

fn C.window_get_tabbing_identifier(&WindowInfo) &char

fn C.window_toggle_tab_bar(&WindowInfo)

fn C.window_select_next_tab(&WindowInfo)

fn C.window_select_previous_tab(&WindowInfo)

fn C.window_set_sharing_type(&WindowInfo, &u8)
fn C.window_get_sharing_type(&WindowInfo) int

// Appearance Override
fn C.window_set_window_appearance(&WindowInfo, &u8)

fn C.window_get_window_appearance(&WindowInfo) &char

fn C.window_is_system_dark_mode(&WindowInfo) int

// Screen Info
fn C.window_get_screen_frame(&WindowInfo, &int, &int, &int, &int)

fn C.window_get_screen_full_frame(&WindowInfo, &int, &int, &int, &int)

fn C.window_get_screen_scale_factor(&WindowInfo) f64

// Cursor Control
fn C.window_set_cursor_hidden(&WindowInfo, int)

fn C.window_set_cursor(&WindowInfo, &u8)

fn C.window_get_cursor(&WindowInfo) &u8

fn C.window_set_cursor_scale(&WindowInfo, f64)

fn C.window_get_cursor_scale(&WindowInfo) f64

fn C.window_reset_cursor(&WindowInfo)

fn C.window_push_cursor(&WindowInfo, &u8)

fn C.window_pop_cursor(&WindowInfo)

fn C.window_set_control_cursor_by_name(&WindowInfo, &u8, &u8)

fn C.window_get_mouse_location(&WindowInfo, &int, &int)

fn C.window_move_cursor_to(&WindowInfo, int, int)

// Resize Indicator
fn C.window_set_shows_resize_indicator(&WindowInfo, int)

fn C.window_get_shows_resize_indicator(&WindowInfo) int

// Content Size Constraints
fn C.window_set_content_min_size(&WindowInfo, int, int)

fn C.window_set_content_max_size(&WindowInfo, int, int)

fn C.window_get_content_min_size(&WindowInfo, &int, &int)

fn C.window_get_content_max_size(&WindowInfo, &int, &int)

fn C.window_get_tab_count(&WindowInfo) int

// new_simple_window creates and initializes a new native SimpleWindow instance with the specified title, width, and height.
pub fn new_simple_window(title string, width int, height int) &SimpleWindow {
	mut win := &SimpleWindow{
		width:                        width
		height:                       height
		title:                        title
		responsive_layout:            true
		resizable:                    true
		minimizable:                  true
		maximizable:                  true
		closable:                     true
		has_shadow:                   true
		movable_by_window_background: false
	}
	win.placeholders = map[string]string{}
	win.tooltips = map[string]string{}
	win.errors = map[string]string{}
	win.tree_nodes = map[string][]TreeNode{}
	win.table_rows = map[string][][]string{}
	win.table_columns = map[string][]string{}
	win.table_selected_columns = map[string]int{}
	win.table_column_selection = map[string]bool{}
	win.grid_rows = map[string][][]string{}
	win.grid_headers = map[string][]string{}
	win.ensure_window()
	sys_register_window(win)
	return win
}

// ensure_window initializes the native Cocoa window backend if not already created.
fn (win &SimpleWindow) ensure_window() {
	if win.window_info == unsafe { nil } {
		params := WindowParams{
			title:                        win.title
			width:                        win.width
			height:                       win.height
			win_ptr:                      win
			padding:                      win.padding
			spacing:                      win.spacing
			always_on_top:                if win.always_on_top { 1 } else { 0 }
			responsive_layout:            if win.responsive_layout { 1 } else { 0 }
			resizable:                    if win.resizable { 1 } else { 0 }
			minimizable:                  if win.minimizable { 1 } else { 0 }
			maximizable:                  if win.maximizable { 1 } else { 0 }
			closable:                     if win.closable { 1 } else { 0 }
			has_shadow:                   if win.has_shadow { 1 } else { 0 }
			movable_by_window_background: if win.movable_by_window_background { 1 } else { 0 }
			titlebar_visible:             if win.titlebar_visible { 1 } else { 0 }
			title_visible:                if win.title_visible { 1 } else { 0 }
		}
		unsafe {
			mut w := &SimpleWindow(win)
			w.window_info = C.window_app_init(&params)
		}
	}
}

// normalize_key_shortcut converts key shortcut strings into canonical form ("cmd+shift+p").
pub fn normalize_key_shortcut(input string) string {
	if input == '' {
		return ''
	}
	mut s := input.to_lower()
	s = s.replace('⌘', 'cmd+')
	s = s.replace('⇧', 'shift+')
	s = s.replace('⌥', 'opt+')
	s = s.replace('⌃', 'ctrl+')
	s = s.replace('command', 'cmd')
	s = s.replace('control', 'ctrl')
	s = s.replace('option', 'opt')
	s = s.replace('alt', 'opt')
	s = s.replace(' ', '')

	parts := s.split('+')
	mut has_cmd := false
	mut has_ctrl := false
	mut has_opt := false
	mut has_shift := false
	mut key_parts := []string{}

	for part in parts {
		match part {
			'cmd', 'meta' { has_cmd = true }
			'ctrl' { has_ctrl = true }
			'opt' { has_opt = true }
			'shift' { has_shift = true }
			'' {}
			else { key_parts << part }
		}
	}

	mut res := []string{}
	if has_cmd {
		res << 'cmd'
	}
	if has_ctrl {
		res << 'ctrl'
	}
	if has_opt {
		res << 'opt'
	}
	if has_shift {
		res << 'shift'
	}
	if key_parts.len > 0 {
		res << key_parts.join('+')
	}

	return res.join('+')
}

// textarea_goto_line scrolls the specified textarea control to the given line number and optionally focuses it.
pub fn (win &SimpleWindow) textarea_goto_line(name string, line_number int, focus bool) &SimpleWindow {
	if win.window_info != unsafe { nil } {
		do_focus := if focus { 1 } else { 0 }
		C.window_textarea_goto_line(win.window_info, name.str, line_number, do_focus)
	}
	return win
}

// append_console appends formatted text log messages to a developer console widget.
pub fn (win &SimpleWindow) append_console(name string, text string, level int) &SimpleWindow {
	if win.window_info != unsafe { nil } {
		C.window_append_console_text(win.window_info, name.str, text.str, level)
	}
	return win
}

// clear_console clears all text in the console control.
pub fn (win &SimpleWindow) clear_console(name string) &SimpleWindow {
	if win.window_info != unsafe { nil } {
		C.window_clear_console(win.window_info, name.str)
	}
	return win
}

// add_chart adds a beautiful native line or area chart control.
// chart_type: "line" or "area"
pub fn (win &SimpleWindow) set_chart_data(name string, values []f64) &SimpleWindow {
	if win.window_info != unsafe { nil } {
		if values.len > 0 {
			C.window_set_chart_data(win.window_info, name.str, values.data, values.len)
		}
	}
	return win
}

// add_shortcut_recorder adds a key combination recording control.
// When focused, the user can press a shortcut which triggers the "change" callback.
pub fn (win &SimpleWindow) set_circular_progress(name string, value int) &SimpleWindow {
	if win.window_info != unsafe { nil } {
		C.window_set_circular_progress_value(win.window_info, name.str, f64(value))
	}
	return win
}

// add_breadcrumbs adds a breadcrumb / path navigation control.
// The list of segments contains the path elements (e.g. ['Home', 'Projects', 'simplegui']).
// You can handle segment click events by registering an `on_click(name, callback)` event.
pub fn (win &SimpleWindow) set_breadcrumbs(name string, segments []string) &SimpleWindow {
	if win.window_info != unsafe { nil } {
		mut c_segs := []&u8{}
		for seg in segments {
			c_segs << seg.str
		}
		C.window_set_breadcrumbs(win.window_info, name.str, c_segs.data, c_segs.len)
	}
	return win
}
